--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,5 @@
 # Below is a list of people and organizations that have contributed
-# to the CommunityChest project. Names should be added to the list as:
+# to CommunityChest. Names should be added to the list as:
 #
 #   Name <email address, XMPP address>
 
