--- a/AUTHORS
+++ b/AUTHORS
@@ -1,8 +1,8 @@
 # Below is a list of people and organizations that have contributed
 # to CommunityChest. Names should be added to the list as:
 #
-#   Name <email address, XMPP address>
+#   Name/Organization <email address, XMPP address>
 
-CommunityChest
+CommunityChest <comchest@akcu.org, comchest@conference.akcu.org>
 
 Caleb Sturges <caleb@akcu.org, caleb@akcu.org>
